# CurlyPython

./: .gitignore  README.md  main.py  pyproject.toml
curlypython/: __init__.py  cli.py  parser.py  parser_enhanced.py
